Implement endpoints defined in swagger API description
